*gitlab-shell-3.6.6 (22 Oct 2016)

  22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.6.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for version 3.6.6, which is a dependency
  of gitlab-ce-8.13.0

  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.2.1.ebuild:
  dev-vcs/gitlab-shell:  removed obsolete version 3.2.1

*gitlab-shell-3.6.0 (23 Sep 2016)

  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for version 3.6.0; dependency of gitlab-
  ce-8.12.0

*gitlab-shell-3.5.0 (16 Sep 2016)

  16 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.5.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for versioin 3.5.0

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-shell-2.0.0-config-paths.patch, -gitlab-shell-3.0.0.ebuild,
  -gitlab-shell-3.2.0.ebuild:
  dev-vcs/gitlab-shell:  purged all versions <gitlab-shell-3.2.1

*gitlab-shell-3.4.0 (22 Aug 2016)

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.4.0.ebuild:
  dev-vcs/gitlab-shell:  added gitlab-shell-3.4.0. this is a dependency of
  gitlab-ce-8.11.0

*gitlab-shell-3.2.1 (27 Jul 2016)

  27 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.2.1.ebuild:
  dev-vcs/gitlab-shell:  Added ebuild for version 3.2.1 which is a dependency of
  gitlab-ce-8.10.2

  26 Jul 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-2.7.2.ebuild:
  dev-vcs/gitlab-shell:  removed ebuild for gitlab-shell-2.7.2, as all available
  versions of gitlab-ce require >=gitlab-shell-3*

*gitlab-shell-3.2.0 (09 Jul 2016)

  09 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.2.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for version 3.2.0

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog