@@ -1,3 +1,7 @@
+  22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.4.0.ebuild,
+  -gitlab-shell-3.6.0.ebuild:
+  dev-vcs/gitlab-shell:  purged unneeded ebuilds
+
 *gitlab-shell-3.6.6 (22 Oct 2016)
 
   22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.6.ebuild:
